hphp/test/slow/shapes/idx_arr_compat.php.expectf
darray(1) {
  ["x"]=>
  int(1)
}
int(1)
darray(1) {
  ["x"]=>
  int(1)
}
int(1)
varray(2) {
  bool(true)
  bool(false)
}

Catchable fatal error: Argument 1 to HH\Shapes::idx() must be of type ?HH\darray, varray given in %s/idx_arr_compat.php on line 14
